<resources>
	<string name="app_name">ProjectCalories</string>
	<string name="title_home">Home</string>
	<string name="title_profile">Profile</string>
	<string name="title_notifications">Notifications</string>
	<string name="weight">Enter your weight (kg)</string>
	<string name="height">Enter your height (cm)</string>
	<string name="income">Income</string>
	<string name="drinking_regime">Drinking regime</string>
	<string name="summary">Summary</string>
	<string name="lose_weight">Lose weight</string>
	<string name="gain_muscles">Gain muscles</string>
	<string name="stay_fit">Stay fit</string>
	<string name="save">Save</string>
	<string name="choose_your_goal">Choose your goal</string>
	<string name="breakfast">Breakfast</string>
	<string name="brunch">Brunch</string>
	<string name="elevenses">Elevenses</string>
	<string name="lunch">Lunch</string>
	<string name="supper">Supper</string>
	<string name="dinner">Dinner</string>
	<string name="drinkTitle">drinkTitle</string>
	<string name="mealTitle">mealTitle</string>
	<string name="amount">Type amount in grams</string>
	<string name="total">Total:</string>
	<string name="drink_amount">Type amount in liters</string>
	<string name="drinks_total">Drinks total:</string>
</resources>
